feat(provider): wire encrypted credentials into FlixBus authentication
The FlixBus adapter now obtains every secret from the encrypted
provider_credentials store instead of configuration.

FlixBusCredentials is the single resolution point: it reads the partner
token for X-API-Authentication and the partner login pair, per call, so a
secret rotated through the admin API takes effect without a redeploy. It
does not decrypt — EncryptedCredentialConverter already runs at the
persistence boundary, and decrypting again would give a future KMS
migration a second place to touch.

clientId/clientSecret are removed from FlixBusProperties and from every
profile, leaving it non-secret configuration only. A structural test
enforces that, since a reinstated key would fail no behavioural test — it
would simply sit in version control until someone wired it up.

Also adds producer-consumer contract tests over shared fixtures in
backend/contracts. Both sides now bind the same bytes: the producer proves
it emits them, each consumer proves it reads them. Previously every side
hand-wrote its own JSON literal, which is how the busType -> serviceClass
rename reached main with inventory-service broken and both suites green.
inventory-service had no client test at all before this.

Scope: authentication only. No FlixBus search response binding, no guessed
schema or DTOs, no session-based auth. TokenRequestDto keeps its stale
clientId/clientSecret names with a TODO — those are outbound JSON field
names, and renaming them without the real provider schema would silently
alter a provider-facing request body.

Verified: 703 tests green (291/360/52), all six services boot healthy, no
credential value reaches any runtime log.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>